--- a/Movie_List.html
+++ b/Movie_List.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Book Haven - Book Collection</title>
+    <title>Movie List </title>
 </head>
 <body>
 
     <!-- Website Header -->
      <center>
     <header>
-        <h1>Our Book Collection</h1>
+        <h1>Our Movie Collection</h1>
        
     </header>
     <!-- Navigation Links -->
@@ -97,7 +97,7 @@
 </table>
     <hr color="">
     <footer>
-        <p>&copy; 2025 Book Haven. All rights reserved.</p>
+        <p>&copy; 2025 Movie List. All rights reserved.</p>
     </footer>
 
 </body>
