--- a/Movie_List.html
+++ b/Movie_List.html
@@ -17,7 +17,7 @@
         <!-- Link to Home Page -->
         <a href="index.html">Home</a> |
         <!-- Link to Books Page -->
-        <a href="books.html">Books</a>
+        <a href="books.html">Movie_List</a>
     </nav></center>
     <hr color="">
 
